--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,12 @@
 title: Noah's Blog
-author:
+author: Noah Chaffin
   name: Noah Chaffin
   email: ChaffinNC@hendrix.edu
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
-  Write an awesome description for your new site here. You can edit this line
-  in _config.yml. It will appear in your document head meta (for Google search
-  results) and in your feed.xml site description.
-
+  My name is Noah Chaffin, and I am a computer science and mathematics double major at Hendrix College.
 # Build settings
 
 theme: minima
