--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@ author: Noah Chaffin
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
-  My name is Noah Chaffin, and I am a computer science and mathematics double major at Hendrix College.
+  My name is Noah Chaffin, and I am a computer science and mathematics double major at Hendrix College. Feel free to go to my social media
+  or to email me for further questions.
 # Build settings
 
 theme: minima
