--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ minima:
     # - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
     - { platform: github,         user_url: "NoahChaffin123.github.io/jekyll" }
     # - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
-    - { platform: instagram,     urer_url: "https://www.instagram.com/noahchaffin2003/jekyll" }
+    - { platform: instagram,     user_url: "https://www.instagram.com/noahchaffin2003" }
   #   - { platform: keybase,        user_url: "https://keybase.io/jekyll" }
   #   - { platform: linkedin,       user_url: "https://www.linkedin.com/in/jekyll" }
   #   - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
