--- a/_config.yml
+++ b/_config.yml
@@ -31,10 +31,10 @@ minima:
     # - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
     # - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
     # - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
-    # - { platform: github,         user_url: "https://github.com/NoahChaffin123/NoahChaffin123.github.io" }
+    - { platform: github,         user_url: "Noahchaffin123.github.io/NoahChaffin123" }
     # - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
     - { platform: instagram,     user_url: "https://www.instagram.com/noahchaffin2003" }
-    - { platform: keybase,        user_url: "NoahChaffin123.github.io/NoahChaffin123" }
+    # - { platform: keybase,        user_url: "NoahChaffin123.github.io/NoahChaffin123" }
   #   - { platform: linkedin,       user_url: "https://www.linkedin.com/in/jekyll" }
   #   - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
   #   - { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
