--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,20 @@
 title: Noah's Blog
 author: Noah Chaffin
-name: Noah Chaffin
-email: ChaffinNC@hendrix.edu
+  name: Noah Chaffin
+  email: ChaffinNC@hendrix.edu
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
-Welcome to my blog. I will mainly post about computer science, or talk about any project I am working on outside of class.
+  This is my blog. You will mainly see posts regarding my academic and career projects.
+
 # Build settings
 
 theme: minima
 
-# plugins:
-#   - jekyll-feed
-#   - jekyll-seo-tag
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
 
 # Theme-specific settings
 
@@ -25,15 +26,15 @@ minima:
 
   # Generate social links in footer.
   #
-   social_links:
-    # - { platform: devto,          user_url: "https://dev.to/jekyll" }
-    # - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
-    # - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
-    # - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
-    - { platform: github,         user_url: "Noahchaffin123" }
-    # - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
-    - { platform: instagram,     user_url: "https://www.instagram.com/noahchaffin2003" }
-    # - { platform: keybase,        user_url: "NoahChaffin123.github.io/NoahChaffin123" }
+  # social_links:
+  #   - { platform: devto,          user_url: "https://dev.to/jekyll" }
+  #   - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
+  #   - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
+  #   - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
+    - { platform: github,         user_url: "https://github.com/jekyll/minima" }
+  #   - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
+    - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
+  #   - { platform: keybase,        user_url: "https://keybase.io/jekyll" }
   #   - { platform: linkedin,       user_url: "https://www.linkedin.com/in/jekyll" }
   #   - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
   #   - { platform: pinterest,      user_url: "https://www.pinterest.com/jekyll" }
