Hopefully making the description work

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ email: ChaffinNC@hendrix.edu
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
-  My name is Noah Chaffin, and I am Computer Science and Mathematics double-major at Hendrix College.
+  My name is Noah Chaffin, and I attend Hendrix College in Arkansas.
 
 # Build settings
 
