--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
-title: Noah's Blog
+title: Noah's Blogs
 author: Noah Chaffin
-name: NoahChaffin123
-email: ChaffinNC@hendrix.edu 
-
+name: Noah Chaffin
+email: ChaffinNC@hendrix.edu
 
 # The `>` after `description:` means to ignore line-breaks until next key.
 # If you want to omit the line-break after the end of text, use `>-` instead.
 description: >
   My name is Noah Chaffin, and I attend Hendrix College in Arkansas.
-
 # Build settings
 
 theme: minima
@@ -27,14 +25,14 @@ minima:
 
   # Generate social links in footer.
   #
-  # social_links:
+  social_links:
   #   - { platform: devto,          user_url: "https://dev.to/jekyll" }
   #   - { platform: dribbble,       user_url: "https://dribbble.com/jekyll" }
   #   - { platform: facebook,       user_url: "https://www.facebook.com/jekyll" }
   #   - { platform: flickr,         user_url: "https://www.flickr.com/photos/jekyll" }
-    # - { platform: github,         user_url: "https://github.com/jekyll/minima" }
-  #   - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
-    # - { platform: instagram,      user_url: "https://www.instagram.com/jekyll" }
+    - { platform: github,         user_url: "https://github.com/NoahChaffin123/NoahChaffin123.github.io" }
+    # - { platform: google_scholar, user_url: "https://scholar.google.com/citations?user=qc6CJjYAAAAJ" }
+    - { platform: instagram,      user_url: "https://www.instagram.com/noahchaffin2003" }
   #   - { platform: keybase,        user_url: "https://keybase.io/jekyll" }
   #   - { platform: linkedin,       user_url: "https://www.linkedin.com/in/jekyll" }
   #   - { platform: microdotblog,   user_url: "https://micro.blog/jekyll" }
@@ -53,3 +51,5 @@ minima:
 # Set to `true` to show excerpts on the homepage.
 #
 # show_excerpts: false
+
+# 
